working on it :d

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,26 @@
 {
-    "home": "Home",
-    "hotels": "Check Hotels",
+    "user": "User",
+    "favorites": "Favorites",
+    "hotels": "Hotels",
     "about": "About",
-    "dashboard": "Dashboard"
+    "dashboard": "Dashboard",
+    "logorcreate": "Login or create account",
+    "createorlog": "Register or Login",
+    "username": "Username",
+    "email": "Email",
+    "password": "Password",
+    "login": "Login",
+    "signup": "Sign Up",
+    "createacc": "Create Account",
+    "loginhere": "Login Here",
+    "or": "Or",
+    "cityselect": "Select a city",
+    "realestatetype": "Real Estate Type",
+    "search-dev": "Find your home the easy way",
+    "apartment": "Apartments",
+    "housingandcot": "Housing and cottages",
+    "comercial": "Commercial real estate",
+    "search": "Search",
+    "next": "Next",
+    "prev": "Previous"
 }
