--- a/src/assets/i18n/ge.json
+++ b/src/assets/i18n/ge.json
@@ -1,6 +1,26 @@
 {
-    "home": "მთავარი",
+    "user": "მომხმარებელი",
+    "favorites": "რჩეულები",
     "hotels": "სასტუმროები",
     "about": "ჩვენს შესახებ",
-    "dashboard": "სამუშაო დაფა"
+    "dashboard": "სამუშაო დაფა",
+    "logorcreate": "გაიარე ავტორიზაცია ან დარეგისტრირდი",
+    "createorlog": "დარეგისტრირდი ან გაიარე ავტორიზაცია",
+    "username": "მომხმარებლის სახელი",
+    "email": "ელფოსტა",
+    "password": "პაროლი",
+    "login": "ავტორიზაცია",
+    "signup": "რეგისტრაცია",
+    "createacc": "შექმენი ანგარიში",
+    "loginhere": "გაიარე ავტორიზაცია",
+    "or": "ან",
+    "cityselect": "აირჩიე ქალაქი",
+    "realestatetype": "უძრავი ქონების ტიპი",
+    "search-dev": "იპოვე სახლი მარტივად",
+    "apartment": "ბინები",
+    "housingandcot": "სახლები, აგარაკები",
+    "comercial": "კომერციული ფართები",
+    "search": "ძებნა",
+    "next": "შემდეგი",
+    "prev": "წინა"
 }
