tryna dont screw anything

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,5 +22,7 @@
     "comercial": "Commercial real estate",
     "search": "Search",
     "next": "Next",
-    "prev": "Previous"
+    "prev": "Previous",
+    "vip": "Vip Listings",
+    "m2": "M²"
 }
