--- a/src/assets/i18n/ge.json
+++ b/src/assets/i18n/ge.json
@@ -22,5 +22,7 @@
     "comercial": "კომერციული ფართები",
     "search": "ძებნა",
     "next": "შემდეგი",
-    "prev": "წინა"
+    "prev": "წინა",
+    "vip": "Vip განცხადებები",
+    "m2": "მ²"
 }
