--- a/src/assets/i18n/ge.json
+++ b/src/assets/i18n/ge.json
@@ -1,7 +1,7 @@
 {
     "user": "მომხმარებელი",
     "favorites": "რჩეულები",
-    "hotels": "სასტუმროები",
+    "hotels": "განცხადებები",
     "about": "ჩვენს შესახებ",
     "dashboard": "სამუშაო დაფა",
     "logorcreate": "გაიარე ავტორიზაცია ან დარეგისტრირდი",
@@ -24,5 +24,22 @@
     "next": "შემდეგი",
     "prev": "წინა",
     "vip": "Vip განცხადებები",
-    "m2": "მ²"
+    "m2": "მ²",
+    "rights": "ყველა უფლება დაცულია®",
+    "send-message": "გააგზავნე წერილი",
+    "area": "ფართი",
+    "addtofav": "ფავორიტებში დამატება",
+    "removefromfav": "ფავორიტებიდან წაშლა",
+    "amenities": "კეთილმოწყობა",
+    "gas": "გაზი",
+    "tv": "ტელევიზია",
+    "internet": "ინტერნეტი",
+    "kitchen": "სამზარეულო",
+    "pool": "აუზი",
+    "hot-water": "ცხელი წყალი",
+    "parking": "პარკინგი",
+    "balcony": "ბალკონი",
+    "restaurant": "რესტორანი",
+    "gym": "ფიტნეს დარბაზი",
+    "other-listings": "შეამოწმე სხვა განცხადებები"
 }
