--- a/src/assets/i18n/ge.json
+++ b/src/assets/i18n/ge.json
@@ -41,5 +41,17 @@
     "balcony": "ბალკონი",
     "restaurant": "რესტორანი",
     "gym": "ფიტნეს დარბაზი",
-    "other-listings": "შეამოწმე სხვა განცხადებები"
+    "other-listings": "შეამოწმე სხვა განცხადებები",
+    "fname": "სახელი",
+    "lname": "გვარი",
+    "phonenum": "ტელეფონის ნომერი",
+    "repeatpass": "გაიმეორე პაროლი",
+    "dateofbirth": "დაბადების თარიღი",
+    "signupform": "სარეგისტრაციო ფორმა",
+    "signin": "გაიარე ავტორიზაცია",
+    "registered": "გაქვს ანგარიში შექმნილი? გაიარე ავტორიზაცია აქ",
+    "notregistered": "არ გაქვს ანგარიში? დარეგისტრირდი აქ",
+    "regasuser": "რეგისტრაცია როგორც მომხმარებელი",
+    "regasrenter": "რეგისტრაცია როგორც გამქირავებელი",
+    "chooseform": "აირჩიეთ რეგისტრაციის ფორმა"
 }
