--- a/src/assets/i18n/ge.json
+++ b/src/assets/i18n/ge.json
@@ -53,5 +53,6 @@
     "notregistered": "არ გაქვს ანგარიში? დარეგისტრირდი აქ",
     "regasuser": "რეგისტრაცია როგორც მომხმარებელი",
     "regasrenter": "რეგისტრაცია როგორც გამქირავებელი",
-    "chooseform": "აირჩიეთ რეგისტრაციის ფორმა"
+    "chooseform": "აირჩიეთ რეგისტრაციის ფორმა",
+    "signout": "გასვლა"
 }
